CCD-5849 Refactoring for new Elasticsearch Java client *wip*